# platform-api

./: .coverage-integration.xml  .dockerignore  .gitignore  .pre-commit-config.yaml  1.py  AUTH_SERVER_IMAGE_NAME  Dockerfile  Dockerfile.k8s  Gopkg.toml  Makefile  PLATFORMADMIN_IMAGE  PLATFORMAUTHAPI_IMAGE  PLATFORMCONFIG_IMAGE  PLATFORMDISKAPI_IMAGE  PLATFORMSECRETS_IMAGE  README.md  deploy.mk  k8s.mk  main.go  minikube.sh  pip_extra_index_url.py  pre-pull.yaml  pyproject.toml  pytest.ini  run_e2e_tests.sh  settings.ini  setup.cfg  setup.py  tox.ini  utils.go
.circleci/: codecov.yml  config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yaml  release-image.yml  release.yml  review-label.yml  stale.yml  test.yaml  update-pre-commit.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_jobs_table.py  0002_add_materialized_field.py  0003_indexes.py  0004_change_materialized_index.py  0005_create_jobs_runtime_cache_table.py  0006_rename_preemptible_fields.py  0007_finished_at_index.py  0008_add_fully_billed_index.py  0009_add_billing_log_tables.py  0010_base_owner.py  0011_add_retention_index.py  0012_drop_jobs_runtime_cache_table.py  0013_add_org_name_column.py  0014_add_project_name_column.py  0015_add_pgcrypto.py  0016_add_org_project_hash_column.py  0017_remove_jobs_fully_billed_index.py  0018_remove_billing_log_table.py  0019_add_job_namespace.py  0c26b76ea170_add_project_name_column.py  0ee42d5f1908_add_retention_index.py  13c284f200c9_remove_jobs_fully_billed_index.py  1497c0e2f5a2_base_owner.py  2390260103ce_create_jobs_runtime_cache_table.py  331ab0d09462_finished_at_index.py  4d851c8afb11_change_materialized_index.py  5a3bdd81e17d_add_billing_log_tables.py  627ac0b10843_add_fully_billed_index.py  631e12f654a4_add_org_project_hash_column.py  68197d86eb6f_rename_preemptible_fields.py  81675d81a9c7_copy_data_from_redis.py  adac6355fbe3_add_pgcrypto.py  bff7b93a59c2_indexes.py  ca2963935742_add_org_name_column.py  de3a85c9c87a_drop_jobs_runtime_cache_table.py  e62854f697b3_add_materialized_field.py  eaa33ba10d63_create_jobs_table.py  fc114b57a56c_remove_billing_log_table.py
api/v1/: batchInference.go  batchInference_test.go  client.go  containerInfo.go  integration_test.go  job.go  main.go  main_test.go  model.go  model_test.go  orchestrator.go  status.go  status_handlers.go  status_test.go  storage.go  training.go  utils.go
charts/platform-api/: Chart.yaml  values-dev.yaml  values-mts.yaml  values-staging.yaml  values.yaml
charts/platform-api-poller/: .helmignore  Chart.yaml  values-dev.yaml  values.yaml
config/: config.go
deploy/: README  platformapi.gke.yml  platformingress.gke.yml  platformjobsingress.gke.yml  platformstorageapi.gke.yml
deploy/jumphost/: Makefile  Readme.md  secret.gke.yml
deploy/platformapi/: .gitignore  Chart.yaml  requirements.yaml  values-dev-aws.yaml  values-dev-azure.yaml  values-dev-gcp.yaml  values-mts.yaml  values-prod-mts.yaml  values-staging-aws.yaml  values-staging-azure.yaml  values-staging-gcp.yaml  values-template.yaml  values.yaml
deploy/platformapi-poller/: Chart.yaml  values-dev-aws.yaml  values-dev-azure.yaml  values-dev-gcp.yaml  values-dev.yaml  values-template.yaml
deploy/ssh/: Chart.yaml  values.yaml
deploy/ssh_auth/: Chart.yaml  values-dev-aws.yaml  values-dev.yaml  values-staging.yaml  values-template.yaml  values.yaml
deploy/traefik/: README.md
fixtures/: request.json  training.json  training2.json
log/: log.go
platform_api/: __init__.py  admin_client.py  api.py  auth_client.py  circuit_breaker.py  cluster.py  cluster_config.py  cluster_config_factory.py  cluster_config_source.py  config.py  config_client.py  config_factory.py  elasticsearch.py  job.py  job_request.py  kube_cluster.py  log.py  orchestrator.py  poller_main.py  postgres.py  project_deleter.py  redis.py  resource.py  trace.py  typedefs.py  user.py
platform_api/handlers/: __init__.py  http_storage_handler.py  job_request_builder.py  jobs_handler.py  models_handler.py  poller_handler.py  stats_handler.py  statuses_handler.py  tags_handler.py  validators.py
platform_api/log_handlers/: gcp_stackdriver_logging.py  log_collector.py  log_factory.py
platform_api/models/: models_handler.py
platform_api/old_kube_client/: apolo.py  client.py  config.py  errors.py  namespace.py
platform_api/orchestrator/: __init__.py  backgroud_pooling.py  background_pooling.py  base.py  base_postgres_storage.py  config.py  enforce_poller.py  garbage_collector.py  job.py  job_enforcer.py  job_policy_enforce_poller.py  job_policy_enforcer.py  job_request.py  job_service.py  jobs_poller.py  jobs_service.py  jobs_storage.py  jobs_telemetry.py  kube_client.py  kube_config.py  kube_orchestrator.py  kube_orchestrator_preemption.py  kube_orchestrator_scheduler.py  logs.py  orchestrator.py  poller_service.py  status.py  status_service.py  utils.py
platform_api/ssh/: .#server.py  server.py  sftp.py  shell.py  ssh_host_dsa_key  ssh_host_dsa_key.pub  ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
platform_api/ssh_auth/: authorize.py  executor.py  forwarder.py  proxy.py
platform_api/utils/: asyncio.py  file.py  google_api_auth.py  kube_utils.py  retry.py  stream.py  template_parse.py  update_notifier.py
platform_api_tests/unit/: test_client.py  test_kube_orchestrator.py
platform_http_fallback/: .dockerignore  Dockerfile  Makefile
platform_http_fallback/html/: index.html
platform_ingress_fallback/: .dockerignore  Dockerfile  Makefile  entrypoint.sh
platform_ingress_fallback/html/: index.html  index.html.template
raml/: platform-api.raml
requirements/: base.txt  constraints.txt  syntax.txt  test.txt  type_checker.txt
singularity/: client.go  containerInfo.go  job.go
testData/fixtures/: training.json  training2.json
tests/: conftest.py  docker-compose.yml  test_conftest.py  test_smoke.py
tests/.docker/: config.tpl
tests/api/: .dockerignore  Dockerfile  Makefile  conftest.py  requirements.txt  test_api.py  test_singularity.py
(+197 files in other folders)
