[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
exclude = '''
/(
      \.git
    | venv
    | __pycache__
)/
'''

[tool.pytest.ini_options]
timeout = 300
timeout_method = "signal"
