[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
exclude = '''
/(
      \.git
    | venv
    | __pycache__
)/
'''

[tool.isort]
line_length = 88
include_trailing_comma = true
multi_line_output = 3
combine_as_imports = true
known_third_party = ["alembic"]
