[metadata]
name = platform-api
description = Neu.ro platform api
url = https://github.com/neuro-inc/platform-api
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
platforms = any
install_requires =
    aiohttp==3.8.1
    iso8601==1.0.2
    trafaret==2.1.1
    neuro-auth-client==22.2.0
    cryptography==37.0.2
    aiorwlock==1.3.0
    neuro-notifications-client==21.12.1
    neuro-logging==21.12.2
    aiohttp-cors==0.7.0
    asyncpg==0.25.0
    sqlalchemy==1.4.25
    alembic==1.7.7
    psycopg2-binary==2.9.3
    typing-extensions==4.2.0
    neuro-admin-client==22.2.1

[options.entry_points]
console_scripts =
    platform-api = platform_api.api:main
    platform-api-poller = platform_api.poller_main:main

[options.extras_require]
dev =
    mypy==0.950
    pre-commit==2.19.0
    aiodocker==0.21.0
    codecov==2.1.12
    pytest==7.1.2
    pytest-asyncio==0.18.3
    pytest-cov==3.0.0
    pytest-timeout==2.1.0
    requests==2.27.1

[isort]
profile=black
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
known_firstparty=platform_api
known_tests=tests

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto
timeout = 300
timeout_method = signal
filterwarnings=
    error
    ignore:direct construction of Function has been deprecated, please use Function.from_parent:pytest.PytestDeprecationWarning:pytest_asyncio
    ignore::DeprecationWarning:trafaret
    ignore::ResourceWarning:
    ignore:The loop argument is deprecated:DeprecationWarning:

[coverage:run]
branch = True
source = platform_api

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiodocker]
ignore_missing_imports = true

[mypy-aiodocker.containers]
ignore_missing_imports = true

[mypy-aiodocker.utils]
ignore_missing_imports = true

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-aiorwlock]
ignore_missing_imports = true

[mypy-asyncssh]
ignore_missing_imports = true

[mypy-asyncssh.stream]
ignore_missing_imports = true

[mypy-iso8601]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client]
ignore_missing_imports = true

[mypy-neuro_auth_client.client]
ignore_missing_imports = true

[mypy-neuro_auth_client.security]
ignore_missing_imports = true

[mypy-notifications_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-trafaret.*]
ignore_missing_imports = true

[mypy-_pytest.*]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-asyncpg.*]
ignore_missing_imports = true

[mypy-asyncpgsa]
ignore_missing_imports = true

[mypy-alembic.*]
ignore_missing_imports = true

[mypy-sqlalchemy.*]
ignore_missing_imports = true
