[metadata]
name = platform-api
description = Neu.ro platform api
url = https://github.com/neuro-inc/platform-api
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
platforms = any
install_requires =
    aiohttp==3.8.1
    iso8601==1.0.2
    trafaret==2.1.1
    neuro-auth-client==22.6.1
    cryptography==41.0.1
    aiorwlock==1.3.0
    neuro-notifications-client==22.6.2
    neuro-logging==21.12.2
    aiohttp-cors==0.7.0
    asyncpg==0.27.0
    sqlalchemy==1.4.25
    alembic==1.9.4
    psycopg2-binary==2.9.6
    typing-extensions==4.5.0
    neuro-admin-client==23.3.0

[options.entry_points]
console_scripts =
    platform-api = platform_api.api:main
    platform-api-poller = platform_api.poller_main:main

[options.extras_require]
dev =
    mypy==1.2.0
    pre-commit==3.2.2
    aiodocker==0.21.0
    pytest==7.3.2
    pytest-asyncio==0.20.3
    pytest-cov==4.0.0
    pytest-timeout==2.1.0
    requests==2.28.1

[isort]
profile=black
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
known_firstparty=platform_api
known_tests=tests
combine_as_imports=True

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto
timeout = 300
timeout_method = signal
filterwarnings=
    error
    ignore:direct construction of Function has been deprecated, please use Function.from_parent:pytest.PytestDeprecationWarning:pytest_asyncio
    ignore::DeprecationWarning:trafaret
    ignore::ResourceWarning:
    ignore:The loop argument is deprecated:DeprecationWarning:

[coverage:run]
branch = True
source = platform_api

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiodocker]
ignore_missing_imports = true

[mypy-aiodocker.containers]
ignore_missing_imports = true

[mypy-aiodocker.utils]
ignore_missing_imports = true

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-aiorwlock]
ignore_missing_imports = true

[mypy-asyncssh]
ignore_missing_imports = true

[mypy-asyncssh.stream]
ignore_missing_imports = true

[mypy-iso8601]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client]
ignore_missing_imports = true

[mypy-neuro_auth_client.client]
ignore_missing_imports = true

[mypy-neuro_auth_client.security]
ignore_missing_imports = true

[mypy-notifications_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-trafaret.*]
ignore_missing_imports = true

[mypy-_pytest.*]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-asyncpg.*]
ignore_missing_imports = true

[mypy-asyncpgsa]
ignore_missing_imports = true

[mypy-alembic.*]
ignore_missing_imports = true

[mypy-sqlalchemy.*]
ignore_missing_imports = true
